# DataHarmonizer

./: Makefile  package.json  promote_to_select.py  pyproject.toml  ranges_string_sers.py  second_columns.tsv  tidy_triad_curations.py  tidy_triad_curations.tsv  use_modular_gd.py
.github/workflows/: codeql-analysis.yml  main.yaml
artifacts/: extra_mixs_inv_field_row.tsv  soil_ebs_terms.txt
artifacts/old/: mixs_vs_sntc_enums.txt
docs/: main.css
docs/script/: main.js
docs/template/dev/: .~lock.data.tsv#  data.js  data.tsv  reference.html
docs/template/soil_emsl_jgi_mg/: data.js  data.tsv  export.js  reference.html
docs/template/soil_emsl_jgi_mg/exampleInput/: valid_jgi_gen_emsl.tsv
lib/: DataHarmonizer.js  data-harmonizer.css
lib/renderers/: unitRenderer.js
linkml_round_trips/: linkml_to_dh_light.py  modular_gd.py
old/: xxx.py
script/: export_utils.js  main.js  make_data.py
sheet2dataharmonizer/: __main__.py  model_sections.py
sheet2dataharmonizer/converters/: commands.py  linkml2dataharmonizer.py  sheet2linkml.py
template/canada_covid19/: data.js  data.tsv  export.js
template/dev/: data.js  data.tsv  reference.html
template/dev/exampleInput/: valid_jgi_gen_emsl.tsv
template/soil_emsl_jgi_mg/: data.js  data.tsv  reference.html
template/soil_emsl_jgi_mg/exampleInput/: valid_jgi_gen_emsl.tsv
tests/: test_sntc.py
www/: main.css  main.html
