[tool.poetry]
name = "sheet2dataharmonizer"
version = "0.1.0"
description = ""
authors = ["Mark Andrew Miller <MAM@lbl.gov>"]

[tool.poetry.dependencies]
deepdiff = "*"
glom = "*"
linkml = "^1.1.13"
linkml-model = "^1.0.6"
# nmdc-schema = ""
pygsheets = "*"
python = "^3.9"
strsimpy = "*"
dpath = "^2.0.5"
pandasql = "^0.7.3"
linkml-model-enrichment = "^0.0.4"
hident = "^0.1.4"

[tool.poetry.dev-dependencies]
black = "*"
click-log = "*"
pytest = "*"
jupyter = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
range_str_ser = "sheet2dataharmonizer.converters.commands:range_str_ser"
tidy_triad_curations = "sheet2dataharmonizer.converters.commands:tidy_triad_curations"
promote_to_select = "sheet2dataharmonizer.converters.commands:promote_to_select"
mixs_package_map = "sheet2dataharmonizer.converters.commands:mixs_package_map"
linkml2dataharmonizer = "sheet2dataharmonizer.converters.commands:linkml2dataharmonizer"
sheet2linkml = "sheet2dataharmonizer.converters.commands:sheet2linkml"
validation_converter = "sheet2dataharmonizer.converters.commands:validation_converter"
